[package]
name = "orb"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.0"
serde = "1.0.228"
serde_json = "1.0.149"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']

[target.wasm32-unknown-unknown.dependencies]
getrandom_v2 = { version = "0.2", features = ["js"], package = "getrandom" }
getrandom    = { version = "0.3", features = ["wasm_js"] }